--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,5 +15,8 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
+  {% if page.show_sidebar %}
+    {% include nav_list_custom %}
+  {% endif %}
   </div>
 {% endif %}
